[package]
name = "lucius-mcp-worker"
version = "0.1.0"
edition = "2021" # Updated edition

[dependencies]
redis = { version = "0.25.0", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36.0", features = ["full"] }
dotenv = "0.15.0"
bollard = "0.16.1" # Though currently mocked, it's a dependency in the original logic
